<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    >
	<TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/hello"
	    android:layout_weight="1"
	    android:textSize="32sp"
	    android:textStyle="bold"
	    android:gravity="center"
    />
    <LinearLayout
    	android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
			android:padding="10dp"
    	>
    	<Button
    		android:id="@+id/button_training" 
    		android:text="@string/button_training"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:layout_weight="1"
    		/>
    	<LinearLayout
    		android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:layout_weight="1"
    		>
	    	<TextView
	    		android:text="@string/heading_training"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_weight="1"
			    android:textSize="14sp"
			    android:textStyle="bold"
			    android:gravity="center_vertical"
			    android:paddingLeft="6dp"
	    		/>
	    	<TextView
	    		android:text="@string/description_training"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_weight="1"
			    android:textSize="12sp"
			    android:gravity="center_vertical"
			    android:paddingLeft="6dp"
	    		/>
    	</LinearLayout>
    </LinearLayout>



    <LinearLayout
    	android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
			android:padding="10dp"
    	>
    	<Button
    		android:id="@+id/button_practice_letter_groups" 
    		android:text="@string/button_practice_letter_groups"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:layout_weight="1"
    		/>
    	<LinearLayout
    		android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:layout_weight="1"
    		>
	    	<TextView
	    		android:text="@string/heading_practice_letter_groups"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_weight="1"
			    android:textSize="14sp"
			    android:textStyle="bold"
			    android:gravity="center_vertical"
			    android:paddingLeft="6dp"
	    		/>
	    	<TextView
	    		android:text="@string/description_practice_letter_groups"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_weight="1"
			    android:textSize="12sp"
			    android:gravity="center_vertical"
			    android:paddingLeft="6dp"
	    		/>
    	</LinearLayout>
    </LinearLayout>

    <LinearLayout
    	android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
			android:padding="10dp"
    	>
    	<Button
    		android:id="@+id/button_practice_words" 
    		android:text="@string/button_practice_words"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:layout_weight="1"
    		/>
    	<LinearLayout
    		android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:layout_weight="1"
    		>
	    	<TextView
	    		android:text="@string/heading_practice_words"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_weight="1"
			    android:textSize="14sp"
			    android:textStyle="bold"
			    android:gravity="center_vertical"
			    android:paddingLeft="6dp"
	    		/>
	    	<TextView
	    		android:text="@string/description_practice_words"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_weight="1"
			    android:textSize="12sp"
			    android:gravity="center_vertical"
			    android:paddingLeft="6dp"
	    		/>
    	</LinearLayout>
    </LinearLayout>
</LinearLayout>